dodanie targów kielc w news jako logotyp oraz wstawienie blank w reszte

--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
 		<div class="row">
 
 			<div class="col-xs-12 col-md-4 single-news">
-<!-- 				<img src="../../src/assets/img/news17/logomin2.png" alt="" class="header">
-				 -->				<div>
+<img src="../../src/assets/img/news20/TargiKielce360.png" alt="" class="header">				<div>
 					<p class="date"></p>
 					<h3 class="title">Targi Kielce na Targach<br><br></h3>
 					<p class="description">Organizator największych halowych targów techniki rolniczej w Europie Środkowo-Wschodniej na Agro Targach Wschód.</p>
@@ -150,8 +149,7 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-4 single-news">
-<!-- 				<img src="../../src/assets/img/news17/logomin2.png" alt="" class="header">
-				 -->				<div>
+<img src="../../src/assets/img/news20/blank360.png" alt="" class="header">				<div>
 					<p class="date"></p>
 					<h3 class="title">Państwowe Instytuty Badawcze na Targach</h3>
 					<p class="description">III Międzynarodowe Agro Targi Wschód będą miejscem, gdzie nie zabraknie polskiej nauki, która wyznacza standardy nowoczesnego i efektywnego rolnictwa.</p>
@@ -160,7 +158,7 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-4 single-news">
-				<!-- <img src="src/assets/img/news15/logomin.png"  alt="" class="header"> -->
+				<img src="../../src/assets/img/news20/blank360.png" alt="" class="header">
 				<div>
 					<p class="date"></p>
 					<h3 class="title">Marszałek Zaprasza</br></br></h3>
