--- a/src/html/exhibitors.html
+++ b/src/html/exhibitors.html
@@ -160,6 +160,7 @@
 
 				<!-- <li><img src="../../src/assets/img/sponsorzy/mini/TargiKielce250.png" alt="sponsors"/></li> -->
 
+				<li><img src="../../src/assets/img/sponsorzy/mini/kamix250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/kamen250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/trouw250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/szkolabrzostku250.png" alt="sponsors"/></li>
