--- a/src/html/exhibitors-en.html
+++ b/src/html/exhibitors-en.html
@@ -159,7 +159,8 @@
 				
 
 				<!-- <li><img src="../../src/assets/img/sponsorzy/mini/TargiKielce250.png" alt="sponsors"/></li> -->
-
+	
+				<li><img src="../../src/assets/img/sponsorzy/mini/kamix250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/kamen250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/trouw250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/szkolabrzostku250.png" alt="sponsors"/></li>
