--- a/index-en.html
+++ b/index-en.html
@@ -513,8 +513,8 @@
 
 					Tel. <b>+48 604 750 443</b><br><br>
 										
-					Tel. <b>+48 502 026 753</b><br><br>
-					<!-- <b>Dyrektor Zarządzający</b><br>
+					<!--Tel. <b>+48 502 026 753</b><br><br>
+					 <b>Dyrektor Zarządzający</b><br>
 								Krzysztof Sawa<br>
 								Tel. <b>+48 604 750 443 </b><br><br> -->			
 					
