--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
 
 					Tel. <b>+48 604 750 443</b><br><br>
 										
-					Tel. <b>+48 502 026 753</b><br><br>
+					<!-- Tel. <b>+48 502 026 753</b><br><br> -->
 					<!-- <b>Dyrektor Zarządzający</b><br>
 								Krzysztof Sawa<br>
 								Tel. <b>+48 604 750 443 </b><br><br> -->			
