--- a/src/html/contact-en.html
+++ b/src/html/contact-en.html
@@ -70,7 +70,7 @@
 
                             <b>Office Agro Targi Wschód</b><br>
                             Tel. <b>+48 606 418 785</b><br>
-                            Tel. <b>+48 502 026 753</b><br>
+                            <!-- Tel. <b>+48 502 026 753</b><br> -->
                             <b><a href="mailto:biuro@agrotargiwschod.pl"> e-mail: biuro@agrotargiwschod.pl</a></b><br>
                             
                            <!--  <b>Zespół organizacyjny</b><br>  -->
@@ -94,12 +94,12 @@
                            Tel. <b>+ 48 517 478 770 </b><br>
                            <span><a href="mailto:k.sawa@agrotargiwschod.pl">e-mail: k.sawa@agrotargiwschod.pl</a></span> -->
 
-                           <b>Vice President</b> <br>
+                           <!--<b>Vice President</b> <br>
                           Karolina Kornas <br>
                           Tel. <b>+ 48 517 478 770 </b><br>
                           <span><a href="mailto:k.kornas@agrotargiwschod.pl">e-mail: k.kornas@agrotargiwschod.pl</a></span>
                        </p>
-                        <!--<p>
+                        <p>
                             <b>Adres do korespondencji:</b> <br>
                             PPHU Sawa Expo Stanisław Sawa <br>
                             Nowosiółki 79 <br>
