usuni ecie kuchcinskiego

--- a/index.html
+++ b/index.html
@@ -318,13 +318,13 @@
 				<h4>Patronat</h4>
 				<hr>	
 			</div>
-				<div class="row">
+				<!-- <div class="row">
 					<div class="col-xs-12 col-md-12  sponsorship">
 						<img src="src/assets/img/partner0.png" alt="partner0">
 						<h5><br></h5>
 						<p></p>
 					</div>
-				</div>
+				</div> -->
 				<div class="row">
 					<!-- <div class="col-xs-12 col-md-3 sponsorship">
 						<img src="src/assets/img/sejm-logo.png" alt="partner0">
