usuniecie kuchcinskiego podziekowanie

--- a/src/html/single-news13.html
+++ b/src/html/single-news13.html
@@ -70,16 +70,16 @@
 
 		<div class="container gallery">
 			<div class="row">
-				<div class="col-xs-12-col-sm-6 col-md-6">
+				<!-- <div class="col-xs-12-col-sm-6 col-md-6">
 					<a href="../../src/assets/img/news13/Patronat_Marszalek_Sejmu_2018.jpeg"><img class="Thumbnail" src="../../src/assets/img/news13/Patronat_Marszalek_Sejmu_2018.jpeg" alt=""></a>
-				</div>
-				<div class="col-xs-12-col-sm-6 col-md-6">
+				</div> -->
+				<div class="col-xs-12-col-sm-6 col-md-6 col-md-offset-2">
 					<a href="../../src/assets/img/news13/Podziekowanie_Jaroslaw_Kaczynski_2018.jpg"><img class="Thumbnail" src="../../src/assets/img/news13/Podziekowanie_Jaroslaw_Kaczynski_2018.jpg" alt=""></a>
 				</div>
 			</div>
 
 			<ul>
-	            <li class="dllink"><a target="_blank" href="../../src/assets/img/news13/Patronat_Marszałek_Sejmu_2018.jpeg">Podziękowanie Marszałka Marka Kuchcińskiego do pobrania</a></li>
+	            <!-- li class="dllink"><a target="_blank" href="../../src/assets/img/news13/Patronat_Marszałek_Sejmu_2018.jpeg">Podziękowanie Marszałka Marka Kuchcińskiego do pobrania</a></li> -->
 	            <li class="dllink"><a target="_blank" href="../../src/assets/img/news13/Podziękowanie_Jarosław_Kaczyński_2018.jpg">Podziękowanie Jarosława Kaczyńskiego do pobrania</a></li>
         	</ul>
 
