--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			</div>
 		</div>	
 
-
+ 
 	<!-- <div class="container gallery">
 			<div class="row">
 				<div class="col-md-4 col-md-offset-1">
@@ -127,7 +127,7 @@
 			</div>
 		</div> -->
 
-	<div class="news container">		
+	<!-- <div class="news container">		
 		<h3>Aktualności</h3>
 		<div class="aside-small-header">
 			<h4>Co nowego?<a href="src/html/plakat.html" style="font-size: 24px; padding-left: 50px;">Plakat</a>
@@ -136,11 +136,12 @@
 			<hr>	
 		</div>
 		
-
+	
 		<div class="row">
-
+	
 			<div class="col-xs-12 col-md-4 single-news">
-<img src="../../src/assets/img/news20/TargiKielce360.png" alt="" class="header">				<div>
+	<img src="../../src/assets/img/news20/TargiKielce360.png" alt="" class="header">				
+			<div>
 					<p class="date"></p>
 					<h3 class="title">Targi Kielce na Targach<br><br></h3>
 					<p class="description">Organizator największych halowych targów techniki rolniczej w Europie Środkowo-Wschodniej na Agro Targach Wschód.</p>
@@ -149,7 +150,7 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-4 single-news">
-<img src="../../src/assets/img/news20/blank360.png" alt="" class="header">				<div>
+	<img src="../../src/assets/img/news20/blank360.png" alt="" class="header">				<div>
 					<p class="date"></p>
 					<h3 class="title">Państwowe Instytuty Badawcze na Targach</h3>
 					<p class="description">III Międzynarodowe Agro Targi Wschód będą miejscem, gdzie nie zabraknie polskiej nauki, która wyznacza standardy nowoczesnego i efektywnego rolnictwa.</p>
@@ -166,9 +167,9 @@
 					<a href="src/html/single-news18.html">Czytaj dalej</a>
 				</div>
 			</div>
-
-
-			<!-- <div class="col-xs-12 col-md-4 single-news">				
+	
+	
+			<div class="col-xs-12 col-md-4 single-news">				
 				<img src="../../src/assets/img/news16/logomin.png" alt="" class="header">
 				<div>
 					<p class="date"></p>
@@ -176,13 +177,13 @@
 					<p class="description">Współpraca polegająca na obustronnej promocji Agro Targów Wschód oraz Politechniki Rzeszowskiej</p>
 					<a href="src/html/single-news19.html">Czytaj dalej</a>
 				</div>
-			</div> -->
+			</div>
 		
 		</div>
 		<div class="row all-news">
 			<a class="" href="src/html/news.html">wszystkie wpisy</a>
 		</div>
-	</div>
+	</div> -->
 	<div class="info container-fluid" style="height: auto;">
 		<!-- <h3>III Agro Targi Wschód</h3> -->
 		<div class="row" style="height: 400px;">
