usuniecie targów kielce z aktualności i ze strony głownej ENG

--- a/index-en.html
+++ b/index-en.html
@@ -118,7 +118,7 @@
 			</div>
 		</div> -->
 
-	<div class="news container">		
+	<!-- <div class="news container">		
 		<h3>News</h3>
 		<div class="aside-small-header">
 			<h4>What's new? <a href="src/html/plakat.html" style="font-size: 24px; padding-left: 100px;">See Poster</a></h4>
@@ -127,18 +127,16 @@
 		<div class="row">
 			
 			<div class="col-xs-12 col-md-4 single-news">
-<!-- 				<img src="../../src/assets/img/news17/logomin2.png" alt="" class="header">
-				 -->				<div>
+	<img src="../../src/assets/img/news17/logomin2.png" alt="" class="header">				<div>
 					<p class="date"></p>
 					<h3 class="title">Targi Kielce at the Fair</br></br></h3>
 					<p class="description">Organizer of the largest trade fairs in Central and Eastern Europe at Agro Fair East.</p>
 					<a href="src/html/single-news20.html">Read on</a>
 				</div>
 			</div>
-
+	
 			<div class="col-xs-12 col-md-4 single-news">
-<!-- 				<img src="../../src/assets/img/news17/logomin2.png" alt="" class="header">
-				 -->				<div>
+	<img src="../../src/assets/img/news17/logomin2.png" alt="" class="header">				<div>
 					<p class="date"></p>
 					<h3 class="title">National Research Institutes at the Fair</br></h3>
 					<p class="description">III International  Agro Targi Wschód will be a place where there will be Polish science, which sets standards for modern and effective agriculture.</p>
@@ -147,7 +145,7 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-4 single-news">
-				<!-- <img src="src/assets/img/news15/logomin.png"  alt="" class="header"> -->
+				<img src="src/assets/img/news15/logomin.png"  alt="" class="header">
 				<div>
 					<p class="date"></p>
 					<h3 class="title">Marshal invites</br></br></h3>
@@ -155,9 +153,9 @@
 					<a href="src/html/single-news18.html">Read on</a>
 				</div>
 			</div>
-
-
-			<!-- <div class="col-xs-12 col-md-4 single-news">				
+	
+	
+			<div class="col-xs-12 col-md-4 single-news">				
 				<img src="../../src/assets/img/news16/logomin.png" alt="" class="header">
 				<div>
 					<p class="date"></p>
@@ -165,13 +163,13 @@
 					<p class="description">Cooperation based on the mutual promotion of Agro Targów Wschód and Rzeszów University of Technology</p>
 					<a href="src/html/single-news19.html">Read on</a>
 				</div>
-			</div> -->
+			</div>
 		
 		</div>
 		<div class="row all-news">
 			<a class="" href="src/html/news.html">all entries</a>
 		</div>
-	</div>
+	</div> -->
 	<div class="info container-fluid" style="height: auto;">
 		<!-- <h3>III Agro Targi Wschód</h3> -->
 		<div class="row" style="height: 400px;">
@@ -307,13 +305,13 @@
 				<h4>Patronage</h4>
 				<hr>	
 			</div>
-				<div class="row">
+				<!-- <div class="row">
 					<div class="col-xs-12 col-md-12  sponsorship">
 						<img src="src/assets/img/partner0.png" alt="partner0">
 						<h5><br></h5>
 						<p></p>
 					</div>
-				</div>
+				</div> -->
 				<div class="row">
 					<!-- <div class="col-xs-12 col-md-3 sponsorship">
 						<img src="src/assets/img/sejm-logo.png" alt="partner0">
