--- a/src/html/news.html
+++ b/src/html/news.html
@@ -74,16 +74,16 @@
 	<div class="news container">	
 		<div class="row">
 
-			<div class="col-xs-12 col-md-4 single-news">				
-				<!-- <img src="../../src/assets/img/news16/logomin.png" alt="" class="header"> -->
-				<div>
-				<p class="date"></p>
-				<h3 class="title">Targi Kielce na Targach</br></br></h3>
-				<!-- <p class="description">Cieszymy się z mocnego wsparcia centrali Krajowego Ośrodka Wsparcia Rolnictwa oraz centrali Agencji Restrukturyzacji i Modernizacji Rolnictwa, którzy wystawią się na Agro Targach Wschód.</p> -->
-				<a href="../../src/html/single-news20.html">Czytaj dalej</a>
-				</div>
-			</div>
-			
+			<!-- <div class="col-xs-12 col-md-4 single-news">				
+							<img src="../../src/assets/img/news16/logomin.png" alt="" class="header">
+							<div>
+							<p class="date"></p>
+							<h3 class="title">Targi Kielce na Targach</br></br></h3>
+							<p class="description">Cieszymy się z mocnego wsparcia centrali Krajowego Ośrodka Wsparcia Rolnictwa oraz centrali Agencji Restrukturyzacji i Modernizacji Rolnictwa, którzy wystawią się na Agro Targach Wschód.</p>
+							<a href="../../src/html/single-news20.html">Czytaj dalej</a>
+							</div>
+						</div>
+						 -->			
 			<div class="col-xs-12 col-md-4 single-news">				
 				<!-- <img src="../../src/assets/img/news16/logomin.png" alt="" class="header"> -->
 				<div>
@@ -113,12 +113,7 @@
 				<a href="../../src/html/single-news18.html">Czytaj dalej</a>
 				</div>
 			</div>
-	</div>
 
-
-
-		<div class="row">
-			
 			<div class="col-xs-12 col-md-4 single-news">				
 				<!-- <img src="../../src/assets/img/news15/logomin.png" alt="" class="header"> -->
 				<div>
@@ -128,6 +123,13 @@
 				<a href="../../src/html/single-news19.html">Czytaj dalej</a>
 				</div>
 			</div>
+	</div>
+
+
+
+		<div class="row">
+			
+			
 
 			<div class="col-xs-12 col-md-4 single-news">				
 				<!-- <img src="../../src/assets/img/news15/logomin.png" alt="" class="header"> -->
@@ -150,6 +152,15 @@
 				</div>
 			</div>
 			
+			<div class="col-xs-12 col-md-4 single-news">				
+<!-- 				<img src="../../src/assets/img/wyjazd.jpg" alt="" class="header">
+			--><div>
+					<p class="date">25 maja 2018</p>
+					<h3 class="title">Pokazy Agro Targi Wschód</h3>
+					<!-- <p class="description">Organizator Agro Targów Wschód przeprowadził pokazy próbne w dniu 25.05.2018 r.</p> -->
+					<a href="../../src/html/single-news10.html">Czytaj dalej</a>
+				</div>
+			</div>			
 
 		</div>
 		
@@ -166,15 +177,7 @@
 			</div> -->
 			
 			
-			<div class="col-xs-12 col-md-4 single-news">				
-<!-- 				<img src="../../src/assets/img/wyjazd.jpg" alt="" class="header">
-			--><div>
-					<p class="date">25 maja 2018</p>
-					<h3 class="title">Pokazy Agro Targi Wschód</h3>
-					<!-- <p class="description">Organizator Agro Targów Wschód przeprowadził pokazy próbne w dniu 25.05.2018 r.</p> -->
-					<a href="../../src/html/single-news10.html">Czytaj dalej</a>
-				</div>
-			</div>
+			
 			<div class="col-xs-12 col-md-4 single-news">				
 <!-- 				<img src="../../src/assets/img/news7S.jpg" alt="" class="header"> -->
 				<div>
