zmiana tytułu strony oraz usuniecie flagi UK

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-	<title> 8-9 czerwca 2019 III Agro Targi Wschód </title>
+	<title> 20-21 czerwca 2020 IV Agro Targi Wschód </title>
 	<!-- test rmpgit -->
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,8 +51,8 @@
 				<!-- <li><a href="../../#Partnerzy">Partnerzy</a></li> -->
 				<li><a href="../../#patronat">Patronat</a></li>
 				<li><a href="../../src/html/contact.html">Kontakt</a></li>
-				<li class="flag GB"><a href="index-en.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li>
-				<!-- <li class="flag UK"><a href="index.html"><img src="../../src/assets/img/polandflag.png" alt="poland"></a></li>
+				<!--<li class="flag GB"><a href="index-en.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li>
+				 <li class="flag UK"><a href="index.html"><img src="../../src/assets/img/polandflag.png" alt="poland"></a></li>
 				 -->
 			</ul>
 		</nav>
