--- a/src/html/exhibitors.html
+++ b/src/html/exhibitors.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-	<title> 8-9 czerwca 2019 III Agro Targi Wschód </title>
-
+<title> 20-21 czerwca 2020 IV Agro Targi Wschód </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 
@@ -38,8 +37,8 @@
 				<li><a href="../../src/html/galleries.html">Galeria</a></li>
 				<li><a href="../../#patronat">Patronat</a></li>
 				<li><a href="../../src/html/contact.html">Kontakt</a></li>
-				<li class="flag GB"><a href="../../src/html/exhibitors-en.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li>
-				<!-- <li class="flag GB"><a href="#"><img src="../assets/img/gbflag.png" alt="wielka brytania"></a></li>
+				<!--<li class="flag GB"><a href="../../src/html/exhibitors-en.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li>
+				 <li class="flag GB"><a href="#"><img src="../assets/img/gbflag.png" alt="wielka brytania"></a></li>
 				<li class="flag UK"><a href="#"><img src="../assets/img/ukraineflag.png" alt="ukraina"></a></li> -->
 
 			</ul>
