poprawki na 2020 na głownej

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<div class="buttons">	
 					<a href="https://www.youtube.com/channel/UCuCU9C1ozVR60ASLK4T1vjw/videos" target="_blank" class="">Oglądaj</a> 
 					<a href="src/html/for-exhibitors-application.html" class="">Zgłoszenia na Targi</a>
-					<a href="src/html/zaproszenie.html">8-9 czerwca 2019 III Agro Targi Wschód</a>
+					<a href="src/html/zaproszenie.html">20-21 czerwca 2020 IV Agro Targi Wschód</a>
 					<a href="src/html/wydarzenia.html">Wydarzenia towarzyszące</a>
 					
 					<a class="aukcja" href="../../src/html/single-news7.html">Aukcja maszyn używanych</a>
@@ -192,7 +192,7 @@
 					<hr>	
 				</div>
 				<div class="content">
-					<p><span>III Agro Targi Wschód, które odbędą się 8-9.06.2019</p>
+					<p><span>IV Agro Targi Wschód, które odbędą się 20-21.06.2020</p>
 					<p>Skołoszów, ul. Przemyska 37, Radymno 37-550, powiat jarosławski, woj. podkarpackie, przy węźle "Przemyśl" autostrady A4</p>
 					<a href="src/html/zaproszenie.html">zobacz zaproszenie</a></br></br>
 					<a href="src/html/contact.html">zobacz mapę dojazdu</a></br></br>
@@ -248,7 +248,7 @@
 					<div class="info-banner">
 						<img class="icon" src="src/assets/img/xyz.png" alt="">
 						<h4>Plan-Program targów</h4>
-						<p>Plan-Program III Międzynarodowych Agro Targów Wschód 8 – 9 czerwca 2019 r.</p>
+						<p>Plan-Program IV Międzynarodowych Agro Targów Wschód 20 – 21 Czerwca 2020 r.</p>
 						<a href="src/html/program.html">czytaj</a>
 					</div>
 				</div>
@@ -256,7 +256,7 @@
 					<div class="info-banner">
 						<img class="icon" src="src/assets/img/ZGLOSZENIA.png" alt="">
 						<h4>Zgłoszenia</h4>
-						<p>Formularze zgłoszeniowe na III edycję Agro Targi Wschód 2019 są dostępne w wersji elektronicznej. Uprzejmie prosimy o przesłanie wypełnionego formularza  zgłoszeniowego w formie papierowej.</p>
+						<p>Formularze zgłoszeniowe na IV edycję Agro Targi Wschód 2020 są dostępne w wersji elektronicznej. Uprzejmie prosimy o przesłanie wypełnionego formularza  zgłoszeniowego w formie papierowej.</p>
 						<a href="src/html/for-exhibitors-application.html" class="">czytaj</a>
 					</div>
 				</div>
