dla wystawców poprawki

--- a/src/html/for-exhibitors.html
+++ b/src/html/for-exhibitors.html
@@ -60,7 +60,7 @@
                     <div class="info-banner _3">
                         <img class="icon" src="../../src/assets/img/xyz.png" alt="">
                         <h4>Plan-Program targów</h4>
-                        <p>Plan-Program III Międzynarodowych Agro Targów Wschód 8 – 9 czerwca 2019 r.</p>
+                        <p>Plan-Program IV Międzynarodowych Agro Targów Wschód 20 – 21 Czerwca 2020 r.</p>
                         <a href="program.html" class="">czytaj</a>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                     <div class="info-banner _1">
                         <img class="icon" src="../../src/assets/img/ZGLOSZENIA.png" alt="">
                         <h4>Zgłoszenia</h4>
-                        <p>Formularze zgłoszeniowe na III edycję „Agro Targi Wschód” 2019 są dostępne w wersji elektronicznej. Uprzejmie prosimy o przesłanie wypełnionego formularza  zgłoszeniowego w formie papierowej i elektronicznej.</p>
+                        <p>Formularze zgłoszeniowe na IV edycję Agro Targi Wschód 2020 są dostępne w wersji elektronicznej. Uprzejmie prosimy o przesłanie wypełnionego formularza  zgłoszeniowego w formie papierowej i elektronicznej.</p>
                         <a href="for-exhibitors-application.html" class="">czytaj</a>
                     </div>
                 </div>
