--- a/src/html/for-exhibitors-regulations.html
+++ b/src/html/for-exhibitors-regulations.html
@@ -72,7 +72,7 @@
                             <ol>
                                 
                                 <li>Organizatorem wystawy Agro Targi Wsch&oacute;d jest P.P.H.U. Sawa Expo Stanisław Sawa, Nowosi&oacute;łki 79, 22-652 Telatyn, tel. +48 606&nbsp;418&nbsp;785, e mail: <a href="mailto:biuro@agrotargiwschod.pl">biuro@agrotargiwschod.pl</a>; <a href="https://www.agrotargiwschod.pl">www.agrotargiwschod.pl</a></li>
-                                <li>Regulamin określa zasady obowiązujące podczas III edycji Agro Targ&oacute;w Wsch&oacute;d, w terminie 8-9 czerwiec 2019.</li>
+                                <li>Regulamin określa zasady obowiązujące podczas IV edycji Agro Targ&oacute;w Wsch&oacute;d, w terminie 20-21 Czerwiec 2020.</li>
                                 <li>Regulamin obowiązuje na całym terenie wystawowym i dotyczy wszystkich jej uczestnik&oacute;w tj. wystawc&oacute;w, zwiedzających a także wszystkie inne podmioty przebywające na terenie Agro Targ&oacute;w Wsch&oacute;d.</li>
                                 <li>Wystawcy biorący udział w targach oraz P.P.H.U Sawa Expo Stanisław Sawa zwany dalej Organizatorem zobowiązują się do przestrzegania zasad niniejszego regulaminu.</li>
                                 <li>Warunki uczestnictwa w targach określają łącznie: regulamin wystawy, regulamin pokaz&oacute;w, formularz zgłoszeniowy, kodeks cywilny.</li>
@@ -80,17 +80,17 @@
                         </li>
                         <li><strong>Sprawy organizacyjne</strong>
                             <ol>
-                                <li>Agro Targi Wsch&oacute;d odbywają się na terenach wystawowych P.P.H.U Sawa Expo Stanisław Sawa, Skołosz&oacute;w, Przemyska 37, 37-550 Radymno w dniach <strong>8-9 czerwca 2019 r. w godzinach 9<sup>00 </sup>- 18<sup>00</sup></strong>.</li>
+                                <li>Agro Targi Wsch&oacute;d odbywają się na terenach wystawowych P.P.H.U Sawa Expo Stanisław Sawa, Skołosz&oacute;w, Przemyska 37, 37-550 Radymno w dniach <strong>20-21 Czerwca 2020 r. w godzinach 9<sup>00 </sup>- 18<sup>00</sup></strong>.</li>
                                 
-                                <li>Organizator udostępnia wystawcom tereny wystawowe od 6 czerwca (czwartek) od godziny 8<sup>00</sup> do 11 czerwca (wtorek) do godziny 15<sup>00</sup>.</li>
+                                <li>Organizator udostępnia wystawcom tereny wystawowe od 18 czerwca (czwartek) od godziny 8<sup>00</sup> do 23 czerwca (wtorek) do godziny 15<sup>00</sup>.</li>
                                 <li>Stoiska wystawowe usytuowane są na terenie trawiastym bez zadaszenia.</li>
                                 <li>Lokalizację stoisk wystawowych określa Organizator wg kolejności wpływających zgłoszeń (decyduje data wpływu formularza zgłoszeniowego) oraz branży.</li>
                                 <li>Bez zgody Organizatora Wystawca nie może zmienić lub łączyć stoisk, dokonywać zmian numeracji stoisk, ani dokonywać jakichkolwiek innych modyfikacji.</li>
                                 <li>Organizator zapewnia odpłatnie powierzchnię wystawową na terenie trawiastym zgodnie z cennikiem znajdującym się w formularzu zgłoszeniowym.</li>
-                                <li>Wystawca zobowiązany jest przygotować swoje stoisko wystawowe <strong>najp&oacute;źniej do 7 czerwca 2019 r. (piątek) do godziny 21<sup>00</sup> i zlikwidować je do 11 czerwca (wtorek) do godziny 15<sup>00</sup>.</strong>
+                                <li>Wystawca zobowiązany jest przygotować swoje stoisko wystawowe <strong>najp&oacute;źniej do 19 czerwca 2020 r. (piątek) do godziny 21<sup>00</sup> i zlikwidować je do 23 czerwca (wtorek) do godziny 15<sup>00</sup>.</strong>
                                 Po tym czasie naliczana będzie kara: 50zł za każdą godzinę pozostawienia sprzętu na stoisku.</li>
-                                <li>Wystawcom umożliwia się pobyt na terenie Targ&oacute;w (w dniach 8-9 czerwca) w godz. 7<sup>00</sup>-18<sup>00</sup>. W czasie trwania Targ&oacute;w na wszystkich stoiskach musi przebywać obsługa stoiska.</li>
-                                <li>Poza godzinami trwania Targ&oacute;w w dniach 8-9 czerwiec 2019 r. w godzinach 18<sup>00</sup>-7<sup>00</sup> na terenie Wystawy obowiązuje zakaz przebywania jakichkolwiek os&oacute;b poza pracownikami Ochrony.</li>
+                                <li>Wystawcom umożliwia się pobyt na terenie Targ&oacute;w (w dniach 20-21 czerwca) w godz. 7<sup>00</sup>-18<sup>00</sup>. W czasie trwania Targ&oacute;w na wszystkich stoiskach musi przebywać obsługa stoiska.</li>
+                                <li>Poza godzinami trwania Targ&oacute;w w dniach 20-21 czerwiec 2020 r. w godzinach 18<sup>00</sup>-7<sup>00</sup> na terenie Wystawy obowiązuje zakaz przebywania jakichkolwiek os&oacute;b poza pracownikami Ochrony.</li>
                                 <li>Każdy pobyt na stoisku poza godzinami trwania targ&oacute;w wymaga wcześniejszego zgłoszenia oraz uzgodnienia z Organizatorem i Ochroną.</li>
                                 <li>W przypadku korzystania przez Wystawcę z usług firmy wykonującej zabudowę stoiska, dowożącej materiały na stoisko lub zewnętrznej firmy cateringowej Wystawca zobowiązany jest przekazać Organizatorowi jej dane w formie pisemnej (e-mail).</li>
                                 <li>Zagospodarowania, demontażu stoisk oraz wywozu dokonuje Wystawca we własnym zakresie i na własny koszt.</li>
@@ -107,10 +107,10 @@
                                 <li>Formularz zgłoszeniowy przyjmowany będzie wyłącznie na druku oryginalnym, opatrzonym pieczątką i podpisami właściciela/prezesa/dyrektora firmy lub osoby upoważnionej przez pracodawcę&nbsp;. Dopuszczalne jest przesłanie formularza drogą elektroniczną (skan). Oryginały należy przesłać pocztą tradycyjną.</li>
 
                                 <li>
-                                    <strong>Zgłoszenia na Targi przyjmowane są do 10 maja 2019 r.</strong>, po tym terminie zgłoszenia realizowane będą w miarę możliwości Organizatora.
+                                    <strong>Zgłoszenia na Targi przyjmowane są do 10 czerwiec 2020 r.</strong>, po tym terminie zgłoszenia realizowane będą w miarę możliwości Organizatora.
                                 </li>
                                 <li>Organizator ma prawo odm&oacute;wienia przyjęcia zgłoszenia bez podania przyczyny.</li>                               
-                                <li>Pełnej opłaty za udział w targach dokonywać należy w nieprzekraczalnym terminie do <strong>31 maja 2019 roku.</strong></li>
+                                <li>Pełnej opłaty za udział w targach dokonywać należy w nieprzekraczalnym terminie do <strong>12 czerwiec 2020 roku.</strong></li>
                                 <li><strong>Okazanie dowodu opłaty za uczestnictwo w targach uprawnia do wjazdu na teren wystawowy.</strong></li>                                
                                 <li>Wystawca zgłasza sw&oacute;j przyjazd na targi w Biurze Targ&oacute;w.</li>
                             </ol>
@@ -122,7 +122,7 @@
                                 <li><strong>Honorowane będą wyłącznie odwołania na piśmie przesłane listem poleconym na 10 dni przed rozpoczęciem targ&oacute;w.</strong></li>
                                 <li>Niedopełnienie odwołania w formie określonej w lit. a) spowoduje dochodzenia pełnej należności od Wystawcy przez Organizatora.</li>
                                 <li>W przypadku odstąpienia od udziału w targach bez zachowania formy i terminu określonych w lit. a) Wystawca zostanie obciążony pełną należnością wynikającą z formularza zgłoszeniowego..</li>
-                                <li>Odwołanie w terminie kr&oacute;tszym niż 10 dni przed targami tj. po 29 maja 2019 r. spowoduje prawo zatrzymania przez organizatora 50% wartości dokonanej wpłaty.</li>
+                                <li>Odwołanie w terminie kr&oacute;tszym niż 10 dni przed targami tj. po 12 czerwca 2020 r. spowoduje prawo zatrzymania przez organizatora 50% wartości dokonanej wpłaty.</li>
                                 <li><strong>Brak udziału, odwołanie swojego uczestnictwa w dniu targ&oacute;w lub po terminie wiąże się z utratą całej wpłaty. Brak opłat za wystawę nie zwolni Wystawcy z pisemnego odwołania. </strong>&nbsp;</li>
                                 <li>Za datę odwołania uczestnictwa uważa się datę wpływu pisma do organizatora.</li>
                                 <li>Organizator zastrzega sobie prawo do odwołania targ&oacute;w w przypadkach i okolicznościach niezależnych od Organizatora, bez prawa do odszkodowania z pełnym zwrotem dokonanych przedpłat.</li>
@@ -133,7 +133,7 @@
                             <ol>
                                 <li>Wystawca wskazany w formularzu jest jednoczesnym nabywcą, na kt&oacute;rego zostaje wystawiona faktura VAT za udział w targach.</li>
                                 <li>Wystawienie faktury następuje w chwili potwierdzenia wynajęcia powierzchni (potwierdzenie następuje drogą elektroniczną lub pocztą tradycyjną). Należność z tytułu faktury należy uiścić najp&oacute;źniej w terminie 14 dni od daty jej wystawienia. Do faktury zostanie doliczony podatek VAT, zgodnie z wysokością obowiązującą w chwili wystawienia faktury.</li>
-                                <li>Wystawca jest zobowiązany do opłacenia w terminie najp&oacute;źniej <strong>do 31 maja 2019 r. pełnej opłaty</strong> za udział w targach przelewem na konto: P.P.H.U Sawa Expo Stanisław Sawa <strong>BGŻ BNP Paribas O/Zamość 73 1600 1462 1832 3176 4000 0001. </strong></li>
+                                <li>Wystawca jest zobowiązany do opłacenia w terminie najp&oacute;źniej <strong>do 12 czerwiec 2020 r. pełnej opłaty</strong> za udział w targach przelewem na konto: P.P.H.U Sawa Expo Stanisław Sawa <strong>BGŻ BNP Paribas O/Zamość 73 1600 1462 1832 3176 4000 0001. </strong></li>
                                 <li>Płatność za udział w targach w odroczonym terminie jest możliwa tylko i wyłącznie na pisemny wniosek Wystawcy, po akceptacji Organizatora P.P.H.U. Sawa Expo Stanisław Sawa lub Gł&oacute;wnego Księgowego.</li>
                                 <li>W przypadku niewywiązania się Wystawcy ze zobowiązań płatniczych w terminie o kt&oacute;rym mowa w pkt. III 6 lub V 2 Organizator ma prawo wykluczenia Wystawcy z udziału w Targach.</li>
                             </ol>
@@ -165,7 +165,7 @@
                             <strong>A) Ruch pojazd&oacute;w i parkowanie</strong>
                             <ol>
                                 <li>Dopuszczalna prędkość pojazd&oacute;w mechanicznych na terenach wystawowych wynosi 10 km/godz.</li>
-                                <li>W czasie trwania targ&oacute;w w dniach 8-9 czerwiec 2019 r. obowiązuje całkowity zakaz ruchu wszelkich pojazd&oacute;w, maszyn i urządzeń na terenie Wystawy, dotyczy to r&oacute;wnież pojazd&oacute;w jednośladowych (rowery, skutery, motocykle itp.), wyjątek stanowią pojazdy uprzywilejowane lub posiadające specjalne oznaczenie Organizatora.</li>
+                                <li>W czasie trwania targ&oacute;w w dniach 20-21 czerwiec 2020 r. obowiązuje całkowity zakaz ruchu wszelkich pojazd&oacute;w, maszyn i urządzeń na terenie Wystawy, dotyczy to r&oacute;wnież pojazd&oacute;w jednośladowych (rowery, skutery, motocykle itp.), wyjątek stanowią pojazdy uprzywilejowane lub posiadające specjalne oznaczenie Organizatora.</li>
                                 <li>Na terenie wystawy obowiązuje bezwzględny zakaz kierowania jakimikolwiek pojazdami pod wpływem alkoholu, a osoba, w przypadku kt&oacute;rej stwierdzi się powyższe, zostanie niezwłocznie usunięta z terenu wystawy przez ochronę i przekazana policji.</li>
                                 <li>Z uwagi na bezpieczeństwo uczestnik&oacute;w targ&oacute;w zabrania się parkowania pojazd&oacute;w w tym także maszyn i urządzeń rolniczych i stawiania eksponat&oacute;w na wewnętrznych drogach komunikacyjnych i przejściach wyznaczonych dla zwiedzających.</li>
                                 <li>Parkowanie dozwolone jest wyłącznie na wyznaczonych przez Organizatora terenach parkingowych.</li>
@@ -224,8 +224,8 @@
                                 <li>Warunkiem korzystania z zam&oacute;wionego przyłącza energetycznego jest posiadanie własnego przedłużacza o długości co najmniej 20 m w celu podłączenia się do skrzynki rozdzielczej.</li>
                                 <li>Stoiska zasilane będą w energię elektryczną zgodnie ze złożonym zam&oacute;wieniem:
                                      <ul>
-                                        <li>8 czerwca 2019 r. od godz. 8.00 do 18.00</li>
-                                        <li>9 czerwca 2018 r. od godz. 8.00 do 18.00</li>
+                                        <li>20 czerwca 2020 r. od godz. 8.00 do 18.00</li>
+                                        <li>21 czerwca 2020 r. od godz. 8.00 do 18.00</li>
                                     </ul>
                                 </li>                                
                                 <li>Ze względ&oacute;w bezpieczeństwa poza godzinami określonymi w pkt. IX.3. zasilanie w energię elektryczną stoisk będzie odłączane, chyba że na uzasadniony wniosek Wystawcy Organizator wyrazi zgodę na dłuższe zasilenie</li>
@@ -247,9 +247,9 @@
                                 <li>Rozładunek i załadunek eksponat&oacute;w odbywa się przy pomocy w&oacute;zka widłowego lub dźwigu i wykonywany jest na koszt wystawcy.</li>
                                 <li>Koszt wynajęcia naliczany jest za każdą rozpoczętą godzinę pracy: w&oacute;zka widłowego z operatorem- 184,50 zł/godz. Brutto, dźwigu z operatorem- dla ładunk&oacute;w o ciężarze jednostkowym do 10 ton- 246,00 zł/godz. Brutto, dla ładunk&oacute;w powyżej 10 ton i specjalistycznych- 319,80 zł/godz. Brutto.</li>
                                 <li>Do rozładunku i załadunku udostępniona będzie nieodpłatnie rampa rozładunkowa (parking dla wystawc&oacute;w).</li>
-                                <li><strong>Rozładunek </strong>sprzętu przy pomocy dźwig&oacute;w odbywać się będzie w następujących terminach: <strong>06.06.2019 r. (czwartek)</strong> w godz. od 8.00 do 18.00, <strong>07.06.2019 r. (piątek)</strong> od godz. 7.00 do 21.00.</li>
-                                <li><strong>Załadunek</strong> sprzętu po zakończeniu wystawy: <strong>09.06.2019 r</strong>. od godz. 17.00 do 21.00, <strong>10.06.2019 r.</strong> od godz. 7.00 do 20.00, <strong>11.06.2019 r.</strong> 7.00 do 15.00.</li>
-                                <li><strong>W sobotę 8 2019 r. czerwca nie będą świadczone usługi dźwigowe.</strong></li>
+                                <li><strong>Rozładunek </strong>sprzętu przy pomocy dźwig&oacute;w odbywać się będzie w następujących terminach: <strong>19.06.2020 r. (piątek)</strong> od godz. 7.00 do 21.00.</li>
+                                <li><strong>Załadunek</strong> sprzętu po zakończeniu wystawy: <strong>20.06.2020 r</strong>. od godz. 17.00 do 21.00, <strong>21.06.2020 r.</strong> od godz. 7.00 do 20.00, </li>
+                                <li><strong>W sobotę 20 czerwca 2020 r. nie będą świadczone usługi dźwigowe.</strong></li>
                                 <li>Firmy, kt&oacute;re nie zadeklarowały w umowie usług dźwigowych mogą zam&oacute;wić usługę na podstawie formalnego zlecenia dostępnego u Organizatora i operatora dźwigu.</li>
                             </ol>
                         </li>                        
@@ -265,7 +265,7 @@
                         <li>
                             <strong>Postanowienia końcowe</strong>
                             <ol>
-                                <li>Wystawca ma prawo do zgłaszania pisemnych reklamacji do 17.06.2019 r.</li>
+                                <li>Wystawca ma prawo do zgłaszania pisemnych reklamacji do 17.06.2020 r.</li>
                                 <li>Reklamacja Wystawcy winna być dokonana w formie pisemnej złożona osobiście lub przesłana listem poleconym, pod rygorem nieważności.</li>
                                 <li>O zachowaniu terminu decyduje data wpływu do Organizatora. Po upływie wyżej określonego terminu żadne reklamacje nie będą rozpatrywane.</li>
                                 <li>Każda reklamacja zostanie rozpatrzona w terminie 30 dni od daty jej wpływu do Organizatora. Organizator powiadomi Wystawcę na piśmie o sposobie załatwienia reklamacji.</li>
@@ -282,7 +282,7 @@
                     </ol>
                     <br>
                     <div class="dllink">
-                        <a target="_blank" href="../assets/pdf/20190105/Regulamin-ATW-2019.pdf">Regulamin targów do pobrania</a>
+                        <a target="_blank" href="">Regulamin targów do pobrania</a>
                     </div>
                 </div>
             </div>
@@ -299,10 +299,10 @@
                 <div class="col-xs-12">                    
                     <ol class="regulations _2">
                         <li>
-                            Niniejszy regulamin określa zasady organizacyjne pokazu pracy maszyn na wystawie Agro Targi Wschód 2019, organizowanej przez P.P.H.U. Sawa Expo Stanisław Sawa, zwanego dalej jako Organizator.
+                            Niniejszy regulamin określa zasady organizacyjne pokazu pracy maszyn na wystawie Agro Targi Wschód 2020, organizowanej przez P.P.H.U. Sawa Expo Stanisław Sawa, zwanego dalej jako Organizator.
                         </li>
                         <li>
-                            Pokazy odbywają się w czasie trwania wystawy, tj. od 8 do 9 czerwca 2019 r.  
+                            Pokazy odbywają się w czasie trwania wystawy, tj. od 20 do 21 czerwca 2020 r.  
                         </li>
                         <li>
                              Osobę odpowiedzialną za kierowanie pokazami, zwaną dalej jako Prezenter, wyznacza Organizator.
@@ -324,7 +324,7 @@
                             </ul>
                         </li>
                         <li>
-                            Program pokazów zostanie przedstawiony uczestnikom pokazu podczas spotkania w dniu 7.06.2019 r. o godz. 16:00 w Biurze Wystawy. Obecność na spotkaniu jest obowiązkowa. 
+                            Program pokazów zostanie przedstawiony uczestnikom pokazu podczas spotkania w dniu 19.06.2020 r. o godz. 16:00 w Biurze Wystawy. Obecność na spotkaniu jest obowiązkowa. 
                         </li>
                         <li>
                             W przypadkach uzasadnionych organizacyjnie, program może być w całości lub części zmieniony decyzją Prezentera.  
@@ -386,7 +386,7 @@
                     </ol>
                     <br>
                     <div class="dllink">
-                        <a target="_blank" href="../assets/pdf/20190105/Regulamin-Pokazow-ATW-2019.pdf">Regulamin pokazów do pobrania</a>
+                        <a target="_blank" href="">Regulamin pokazów do pobrania</a>
                     </div>
                 </div>
             </div>
@@ -420,7 +420,7 @@
                     <div class="info-banner">
                         <img class="icon" src="../../src/assets/img/ZGLOSZENIA.png" alt="">
                         <h4>Zgłoszenia</h4>
-                        <p>Formularze zgłoszeniowe na III edycję „Agro Targi Wschód” 2019 są dostępne w wersji elektronicznej. </p>
+                        <p>Formularze zgłoszeniowe na IV edycję Agro Targi Wschód 2020 są dostępne w wersji elektronicznej. </p>
                         <a href="for-exhibitors-application.html" class="">czytaj</a>
                     </div>
                 </div>
