--- a/src/html/zaproszenie.html
+++ b/src/html/zaproszenie.html
@@ -53,7 +53,7 @@
                 <ul class="breadcrumbs">
                     <li><a href="../../index.html">start</a></li>				
                     <li><a href="../../src/html/for-exhibitors.html">dla wystawców</a></li>
-                    <li class="active"><a href="">Zapraszamy  na III Agro Targi Wschód 2019</a></li>
+                    <li class="active"><a href="">Zapraszamy  na IV Agro Targi Wschód 2020</a></li>
                 </ul>
                   
             </div>			
@@ -64,7 +64,7 @@
                 <div class="col-xs-12">
                     <div class="text-box text-justify">
                     
-                    Serdecznie zapraszamy Państwa do udziału w III Międzynarodowych Agro Targach Wschód, które odbędą się w dniach 8-9 czerwca 2019 roku w Skołoszowie, gmina Radymno (węzeł Przemyśl autostrady A4).
+                    Serdecznie zapraszamy Państwa do udziału w IV Międzynarodowych Agro Targach Wschód, które odbędą się w dniach 20-21 czerwca 2020 roku w Skołoszowie, gmina Radymno (węzeł Przemyśl autostrady A4).
 
         To kompleksowa wystawa maszyn i urządzeń rolniczych, nawozów, nasion, środków ochrony roślin oraz firm z sektora finansowego i innych branż związanych z rolnictwem, w południowo-wschodniej Polsce, tuż przy granicy z Ukrainą.
 
@@ -116,7 +116,7 @@
                     <div class="info-banner">
                         <img class="icon" src="../../src/assets/img/ZGLOSZENIA.png" alt="">
                         <h4>Zgłoszenia</h4>
-                        <p>Formularze zgłoszeniowe na III edycję „Agro Targi Wschód” 2019 są dostępne w wersji elektronicznej. </p>
+                        <p>Formularze zgłoszeniowe na IV edycję Agro Targi Wschód 2020 są dostępne w wersji elektronicznej. </p>
                         <a href="for-exhibitors-application.html" class="">czytaj</a>
                     </div>
                 </div>
