poprawki literówki oraz dodatnie daty do plakatu 2019

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 					<p>Skołoszów, ul. Przemyska 37, Radymno 37-550, powiat jarosławski, woj. podkarpackie, przy węźle "Przemyśl" autostrady A4</p>
 					<a href="src/html/zaproszenie.html">zobacz zaproszenie</a></br></br>
 					<a href="src/html/contact.html">zobacz mapę dojazdu</a></br></br>
-					<a href="src/html/plakat.html">zobacz plakat</a>
+					<a href="src/html/plakat.html">zobacz plakat 2019</a>
 					
 				</div>
 			</div>
