--- a/src/html/program.html
+++ b/src/html/program.html
@@ -55,7 +55,7 @@
             </div>			
         </div>
 
-        <h3 class="h-program">Plan i Program IV Międzynarodowych Agro Targów Wschód 20 – 21 Czerwca 2020 jest w trakcjie budowy</h3>
+        <h3 class="h-program">Plan i Program IV Międzynarodowych Agro Targów Wschód 20 – 21 Czerwca 2020 jest w trakcie budowy</h3>
       
 
         <div class="container">
